--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+
+<!--    New Colors Added-->
     <color name="black">#FF000000</color>
     <color name="MSU_Maroon">#5E0009 </color>
     <color name="white">#FFFFFFFF</color>
